--- a/config/config.json
+++ b/config/config.json
@@ -21,7 +21,7 @@
         "authentication":
         {
             "gmail-user" : "rahulml2505ytc@gmail.com",
-            "gmail-password" : "25rahulmlwin"
+            "gmail-password" : "your_pass"
         }
     }
 }
